--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           equipment, convenient group training classes, and nutrition tips and information to keep
           you healthy.</p>
           
-          <p>We provide a FREE, one-week membership to experience teh benefits of our equipment
+          <p>We provide a FREE, one-week membership to experience the benefits of our equipment
           and facility. This one-week trial gives you complete access to our equipment, training
           class, and nutrition planning. Contact us today to start your free trial!</p>
         </main>
